--- a/css/error.css
+++ b/css/error.css
@@ -1,7 +1,7 @@
-/* ffb02f */
+/* 80C2D9 */
 @font-face {
     font-family: 'Kaushan Script';
-    src: local('cursive'), url(./src/assets/Kaushan_Script/KaushanScript-Regular.ttf) format('truetype');
+    src: local('cursive'), url(../assets/Kaushan_Script/KaushanScript-Regular.ttf) format('truetype');
     /* other formats include: 'woff2', 'truetype, 'opentype', 'embedded-opentype', and 'svg' */
 }
 
@@ -12,11 +12,7 @@
 }
 
 body {
-    /* 80C 2D9 */
-    /* ffb02f */
-    /* fca755 */
-    /* ffcc00 */
-    --accent-color: #eba32f;
+    --accent-color: #d12e2e;
     --text-color: #e0e0e0;
     --background-color: #1e1e1e;
 }
@@ -122,7 +118,7 @@ p {
     display: inline-block;
     margin-top: 20px;
     background-color: rgb(from var(--accent-color) r g b / 25%);
-    color: #b3a17b;
+    color: #c08888;
     text-decoration: none;
     border-radius: 1em;
     transition: background-color 150ms ease, color 150ms ease, border-color 150ms ease;
@@ -130,23 +126,23 @@ p {
     font-family: inherit;
     cursor: pointer;
     font-size: medium;
-    border: 1px solid #a7894a;
+    border: 1px solid #702929;
 }
 
 .primary-button:hover {
     background-color: rgb(from var(--accent-color) r g b / 37.5%);
-    /* border-color: #a7894a; */
-    color: #ffefc5;
+    border-color: rgb(from var(--accent-color) r g b / 50%);
+    color: #ffd0d0;
 }
 
 .primary-button:active {
     background-color: rgb(from var(--accent-color) r g b / 50%);
-    /* border-color: rgb(from var(--accent-color) r g b / 50%); */
-    color: #ffefc5;
+    border-color: rgb(from var(--accent-color) r g b / 50%);
+    color: #ffd0d0;
 }
 
 .image404 {
-    max-width: 40vw;
+    max-width: 1200px;
     max-height: 80vh;
 }
 
@@ -157,30 +153,52 @@ p {
 
 @media (prefers-color-scheme: light) {
     body {
-        --accent-color: #ffb02f;
+        --accent-color: #ff3b3b;
         --text-color: #5f5f5f;
         --background-color: #f5f5f5;
-        background: var(--background-color);
-        color: var(--text-color);
     }
 
     .primary-button {
-        background-color: rgb(from var(--accent-color) r g b / 25%);
-        color: #72adbe;
-        border-color: #A7CBD6;
+        background-color: rgb(from var(--accent-color) r g b / 15%);
+        color: #d15f5f;
+        border-color: #da7171;
     }
 
     .primary-button:hover {
-        background-color: rgb(from var(--accent-color) r g b / 37.5%);
-        color: #578491;
-        border-color: #A7CBD6;
+        background-color: rgb(from var(--accent-color) r g b / 22.5%);
+        color: #bb1f1f;
+        border-color: #da7171;
     }
 
     .primary-button:active {
-        background-color: rgb(from var(--accent-color) r g b / 50%);
-        color: #578491;
-        border-color: #A7CBD6;
+        background-color: rgb(from var(--accent-color) r g b / 30%);
+        color: #bb1f1f;
+        border-color: #da7171;
     }
+}
+
+body[data-theme="light"] {
+    --accent-color: #ff3b3b;
+    --text-color: #5f5f5f;
+    --background-color: #f5f5f5;
+}
+
+[data-theme="light"] .primary-button {
+    background-color: rgb(from var(--accent-color) r g b / 25%);
+    color: #d15f5f;
+    border-color: #da7171;
+}
+
+[data-theme="light"] .primary-button:hover {
+    background-color: rgb(from var(--accent-color) r g b / 37.5%);
+    color: #bb1f1f;
+    border-color: #da7171;
+}
+
+[data-theme="light"] .primary-button:active {
+    background-color: rgb(from var(--accent-color) r g b / 50%);
+    color: #bb1f1f;
+    border-color: #da7171;
 }
 
 @media screen and (max-width: 1800px) {
